<?xml version="1.0" encoding="utf-8"?>

    <!--Initiating the app's scroll view-->
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:background="@color/black"
    android:layout_height="fill_parent">

    <!--Initiating the app's relative layout-->
    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

    <!--Initiating the app's linear layout-->
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.takescreenshot_demo.MainActivity"
        android:id="@+id/root_content"
        android:padding="10dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <!--Initiating the 'Detection Screenshot' text view-->
        <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_margin="16dp"
        android:text="@string/explanation"
        android:textColor="@color/primary_text" />

        <!--Initiating the ImageView for the screenshot-->
        <ImageView
        android:id="@+id/imgView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="900px"
        android:maxWidth="1050px"
        android:minHeight="100px"
        android:minWidth="250px"
        android:layout_weight="1"
        android:visibility="visible" />

        <!--Initiating the linear layout for the 2 buttons-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center" >

        <!--Initiating the 'Change Image' button-->
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Image"
        android:id="@+id/buttonLoadPicture"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center" />

        <!--Initiating the 'Refresh Image' button-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Refresh Fields"
            android:id="@+id/refreshbutton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center" />

        </LinearLayout>

        <!--Initiating the linear layout for the image date-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center" >

            <!--Initiating the current date text view-->
            <TextView
                android:id="@+id/current_date_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/primary_text"
                android:textSize="17sp"
                android:layout_margin="16dp" />

        </LinearLayout>

        <!--Initiating the linear layout for the image time-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center" >

            <!--Initiating the current date text view-->
            <TextView
                android:id="@+id/current_date_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/primary_text"
                android:textSize="17sp"
                android:layout_margin="16dp" />

        </LinearLayout>

        <!--Initiating the linear layout for the first spinner-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left" >

            <!--Initiating the 'Platform Type' text view for the first drop-down list-->
            <TextView
                android:id="@+id/bodyTest"
                android:layout_width="match_parent"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/explanation1"
                android:textColor="@color/primary_text" />

            <!--Initiating the first drop-down list-->
            <Spinner
                android:id="@+id/platformtypespinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_margin="16dp" />

        </LinearLayout>

        <!--Initiating the linear layout for the second spinner-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left" >

            <!--Initiating the 'Platform' text view for the second drop-down list-->
            <TextView
                android:id="@+id/bodyTest56"
                android:layout_width="match_parent"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Platform: "
                android:textColor="@color/primary_text" />

            <!--Initiating the second drop-down list-->
            <Spinner
                android:id="@+id/platformspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_margin="16dp"
                android:layout_below="@+id/spinner1" />

        </LinearLayout>

        <!--Initiating the 'Report Details and Action Taken' text view-->
        <TextView
        android:id="@+id/bodyTest2"
        android:layout_width="match_parent"
        android:textSize="17sp"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:layout_margin="16dp"
        android:text="@string/explanation4" />

        <!--Initiating the second 'Enter text here' text entry field-->
        <EditText
        android:id="@+id/body3"
        android:layout_width="match_parent"
        android:textSize="17sp"
        android:layout_height="wrap_content"
        android:textColorHint="#000000"
        android:layout_margin="16dp"
        android:maxLines="1"
        android:inputType="text"
        android:textColor="@color/primary_text"
        android:hint="@string/text_to_share" />

        <!--Initiating the 'Send Report' button-->
        <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/share" />

        <!--Hidden HaaSS Score Value-->
        <TextView
            android:id="@+id/current_date_time7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0"
            android:ellipsize="end"
            android:visibility="visible"
            android:maxLines="1"
            android:textSize="17sp"
            android:textColor="@color/primary_text"
            android:layout_margin="16dp" />

    </LinearLayout>
    </RelativeLayout>
    </ScrollView>